--- a/UI/main_window.ui
+++ b/UI/main_window.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1359</width>
-    <height>798</height>
+    <height>809</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -43,7 +43,7 @@
      <enum>QTabWidget::Rounded</enum>
     </property>
     <property name="currentIndex">
-     <number>3</number>
+     <number>5</number>
     </property>
     <property name="elideMode">
      <enum>Qt::ElideLeft</enum>
@@ -3576,7 +3576,7 @@
       <x>10</x>
       <y>10</y>
       <width>239</width>
-      <height>741</height>
+      <height>751</height>
      </rect>
     </property>
     <property name="sizePolicy">
@@ -4289,7 +4289,7 @@
        <x>0</x>
        <y>0</y>
        <width>237</width>
-       <height>501</height>
+       <height>511</height>
       </rect>
      </property>
      <attribute name="label">
@@ -5178,8 +5178,8 @@
    <widget class="QPushButton" name="Button_proba">
     <property name="geometry">
      <rect>
-      <x>1120</x>
-      <y>715</y>
+      <x>1110</x>
+      <y>700</y>
       <width>113</width>
       <height>32</height>
      </rect>
@@ -5433,24 +5433,17 @@
      <string>Создать</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_23">
+   <widget class="QProgressBar" name="progressBar">
     <property name="geometry">
      <rect>
-      <x>660</x>
-      <y>750</y>
-      <width>203</width>
-      <height>16</height>
+      <x>1110</x>
+      <y>740</y>
+      <width>240</width>
+      <height>23</height>
      </rect>
     </property>
-    <property name="font">
-     <font>
-      <family>Courier New</family>
-      <pointsize>14</pointsize>
-      <italic>true</italic>
-     </font>
-    </property>
-    <property name="text">
-     <string>по группам</string>
+    <property name="value">
+     <number>24</number>
     </property>
    </widget>
   </widget>
